# ETEM

./: README.md  set-up-env.sh
ODFL-src/: gcc_main.py  gcc_setup.py  llvm_main.py  llvm_setup.py
ODFL-src/benchmark/: gccbugs_summary.txt  llvmbugs_summary.txt
ODFL-src/conf/: config.ini
ODFL-src/gcc/: __init__.py  collect_finer_optimi.py  collect_optioninfo.py  install_gcc.py  metric.py  optconfig.py  rank.py
ODFL-src/gcc/analysis/: evluation_failconfig_num.py  flag_num.csv  motivation_data.py  multi-flags.py  pass__fail_similarity.py
ODFL-src/gcc/check/: gcc_fie_num.py  gcc_version.txt
ODFL-src/gcc/study/: count_line.py  nohup.out
ODFL-src/llvm/: __init__.py  buggyfiles_info.txt  collect_finer_optimi.py  collect_optioninfo.py  metric.py  optconfig.py  rank.py
ODFL-src/llvm/analysis/: cmp_efficiency.py  collect_optioninfo.py  count_flag_num.py  main.py  rank.py  signi_test.py
ODFL-src/llvm/check/: benchmark_modi.py  cov_exist.py  cov_num.csv  cov_num.py  genecov.py  optconfigure.py  version.py  version.txt
ODFL-src/llvm/study/: coverage_line.py  coverage_similarity.py  gcc_main.py
benchmark/: gccbugs_all.txt  llvmbugs_all.txt
benchmark/llvmbugs/44705/: fail.c
benchmark/llvmbugs/48813/: fail.c
benchmark/llvmbugs/49005/: locations
benchmark/llvmbugs/49965/: locations
benchmark/llvmbugs/54079/: fail.c
benchmark/llvmbugs/56039/: fail.c
benchmark/llvmbugs/59704/: locations
benchmark/llvmbugs/63327/: locations
benchmark/llvmbugs/63337/: fail.c  locations
benchmark/llvmbugs/63996/: fail.c
benchmark/llvmbugs/64259/: fail.c  locations
benchmark/llvmbugs/64333/: fail.c  locations
benchmark/llvmbugs/64345/: fail.c
benchmark/llvmbugs/64598/: fail.c
benchmark/llvmbugs/66066/: fail.c  locations
benchmark/llvmbugs/66484/: fail.c
benchmark/llvmbugs/67287/: locations
benchmark/llvmbugs/68260/: locations
benchmark/llvmbugs/69096/: fail.c
benchmark/llvmbugs/69097/: locations
benchmark/llvmbugs/70547/: locations
experimental_result/DiWi/gccbugs/: eval.txt  rankFile-56478  rankFile-57303  rankFile-57341  rankFile-57488  rankFile-57521  rankFile-57719  rankFile-58068  rankFile-58223  rankFile-58343  rankFile-58418  rankFile-58451  rankFile-58539  rankFile-58570  rankFile-58640  rankFile-58662  rankFile-58696  rankFile-58726  rankFile-58759  rankFile-59221  rankFile-59594  rankFile-59715  rankFile-59747  rankFile-60452  rankFile-61140  rankFile-61306  rankFile-61383  rankFile-61517  rankFile-61518  rankFile-61578  rankFile-61681  rankFile-62151  rankFile-63551  rankFile-63605  rankFile-63659  rankFile-64041  rankFile-64682  rankFile-64756  rankFile-64853  rankFile-65318  (+19 more)
experimental_result/DiWi/llvmbugs/: eval.txt  rankFile-48813  rankFile-49005  rankFile-49597  rankFile-49931  rankFile-49965  rankFile-50246  rankFile-50250  rankFile-50288  rankFile-50291  rankFile-50296  rankFile-50387  rankFile-50430  rankFile-50469  rankFile-50519  rankFile-50727  rankFile-51136  rankFile-51618  rankFile-52722  rankFile-54023  rankFile-54112  rankFile-54217  rankFile-54224  rankFile-54228  rankFile-54235  rankFile-56039  rankFile-56103  rankFile-57899  rankFile-58340  rankFile-58401  rankFile-58441  rankFile-58725  rankFile-59704  rankFile-60944  rankFile-61312  rankFile-62088  rankFile-62175  rankFile-63327  rankFile-63336  rankFile-63337  (+20 more)
experimental_result/ODFL/gccbugs/: eval.txt  rankFile-56478  rankFile-57303  rankFile-57341  rankFile-57488  rankFile-57521  rankFile-57719  rankFile-58068  rankFile-58223  rankFile-58343  rankFile-58418  rankFile-58451  rankFile-58570  rankFile-58640  rankFile-58662  rankFile-58696  rankFile-58726  (+41 more)
mutator/exefile/: addFunction-sel  repStmtFunction-sel
mutator/srcfile/TurnConstantVar-mul/: CMakeLists.txt  TurnConstantVar-mul.cpp
mutator/srcfile/TurnConstantVar-sel/: CMakeLists.txt  TurnConstantVar-sel.cpp
mutator/srcfile/add2If-mul/: CMakeLists.txt  add2If-mul.cpp
mutator/srcfile/add2If-sel/: CMakeLists.txt  add2If-sel.cpp
mutator/srcfile/add2Loop-mul/: CMakeLists.txt  add2Loop-mul.cpp
mutator/srcfile/add2Loop-sel/: CMakeLists.txt  add2Loop-sel.cpp
mutator/srcfile/addFuncArg-mul/: CMakeLists.txt  addFuncArg-mul.cpp
mutator/srcfile/addFuncArg-sel/: CMakeLists.txt  addFuncArg-sel.cpp
mutator/srcfile/addFunction-mul/: CMakeLists.txt  addFunction-mul.cpp
mutator/srcfile/addGoto-mul/: CMakeLists.txt  addGoto-mul.cpp
mutator/srcfile/addGoto-sel/: CMakeLists.txt  addGoto-sel.cpp
mutator/srcfile/addIf-mul/: CMakeLists.txt  addIf-mul.cpp
mutator/srcfile/addIf-sel/: CMakeLists.txt  addIf-sel.cpp
mutator/srcfile/addInline-sel/: CMakeLists.txt  addInline-sel.cpp
mutator/srcfile/addLoopIf-mul/: CMakeLists.txt  addLoopIf-mul.cpp
mutator/srcfile/addQualifier-mul/: CMakeLists.txt  addQualifier-mul.cpp
mutator/srcfile/addQualifier-sel/: CMakeLists.txt  addQualifier-sel.cpp
mutator/srcfile/addRepModifier-mul/: CMakeLists.txt  addRepModifier-mul.cpp
mutator/srcfile/addRepModifier-sel/: CMakeLists.txt  addRepModifier-sel.cpp
mutator/srcfile/addVarDecl-mul/: CMakeLists.txt  addVarDecl-mul.cpp
mutator/srcfile/addVarDecl-sel/: CMakeLists.txt  addVarDecl-sel.cpp
mutator/srcfile/addWhile-mul/: CMakeLists.txt  addWhile-mul.cpp
mutator/srcfile/delIf-mul/: CMakeLists.txt  delIf-mul.cpp
mutator/srcfile/delIf-sel/: CMakeLists.txt  delIf-sel.cpp
mutator/srcfile/delLoop-mul/: CMakeLists.txt  delLoop-mul.cpp
mutator/srcfile/delLoop-sel/: CMakeLists.txt  delLoop-sel.cpp
mutator/srcfile/delStmt-mul/: CMakeLists.txt  delStmt-mul.cpp
mutator/srcfile/delStmt-sel/: CMakeLists.txt  delStmt-sel.cpp
mutator/srcfile/disableLoopUnroll-mul/: CMakeLists.txt  disableLoopUnroll-mul.cpp
mutator/srcfile/disableLoopUnroll-sel/: CMakeLists.txt  disableLoopUnroll-sel.cpp
run/: gcc-eval.py  gcc-get-res.py  gcc-run.py  gcc-setup.py  llvm-eval.py  llvm-get-res.py  llvm-run.py  llvm-setup.py
run/benchmark/: gccbugs_all.txt  gccbugs_summary.txt  llvmbugs_all.txt  llvmbugs_summary.txt
run/config/: config.ini  ini_actions.txt
workplace/llvmbugs/: rankFile-54112  rankFile-54224  rankFile-54228
(+3784 files in other folders)
